--- a/style.css
+++ b/style.css
@@ -1,115 +1,143 @@
 .conteiner {
     max-width: 1440px;
     width: 100%;
-    height: 100%;
     margin: auto;
+   
 }
 
-/* header */
+
+.fa-bars {
+    background-color: black;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 50%;
+    display: none;
+}
+
 .cover {
-    width: 90%;
-    margin: auto;
-    padding: 24px 32px 32px;
+  width: 90%;
+    padding: 24px 32px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.cover_logo {
-    display: flex;
-}
-
-
-.cover_photo.a {
-    width: 60%;
-    font-family: 'Inter', sans-serif;
-    font-weight: 900;
-    font-size: 30px;
-    color: black;
-}
-
-.cover_h5 {
-    font-family: 'Inter', sans-serif;
-    font-size: 8px;
-    font-weight: 900;
-}
-
-.cover_ul {
-
+.header_ul {
     display: flex;
     gap: 24px;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 800;
     font-size: 16px;
-    line-height: 19px;
-    text-align: right;
-    letter-spacing: 0.1px;
+    font-weight: 600;
+    font-family: 'inter' sans-serif;
 
 }
-
-
-.cover_p {
-
+   
+.header_button_link .cover_button{
     background-color: black;
-    color: white;
-    border-radius: 47%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    color: beige;
+    border-radius: 50%;
     padding: 12px 24px;
-    gap: 10px;
+    font-size: 16px;
+    font-family: 'inter'sans-serif;
 }
-
-/* header ending */
-.section_main {
-
-    height: 100%;
+.section_class{
+    
+    display: flex;
+    width: 75%;
     margin: auto;
-    top: 96px;
-
+    margin: 64px auto;
+    justify-content: space-between;
+    align-items: center;
 }
-
-.section_div1 {
-    width: 30%;
-    padding-left: 165px;
-
-    flex: none;
-    font-family: 'Inter' sans-serif;
-
+.section_div1{
+    width: 47%;
 }
-
-.section_h3 {
-    padding-top: 134px;
-    font-style: normal;
-    font-weight: 900;
+.section_div3{
+    width: 48%;
+}
+.section_img{
+    width: 100%;
+    height: 428px;
+}
+.section_div1_p{
     font-size: 56px;
-    line-height: 60px;
+    font-weight: 600;
+    font-family: 'inter'sans-serif;
+    margin-bottom: 24px;
+}
+.section_div2_p{
+font-size: 16px;
+font-family: 'inter'sans-serif;
+font-weight: 500;
+color: black;
+margin-bottom: 40px;
 
 }
-
-.section_p {
-    padding-top: 26px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
+.section_2{
+    width: 90%;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 150px;
+    padding-right: 150px;
+    align-items: center;  
+     
 }
 
+.section_2_img{
+    width: 100%;
+    padding: 96px ;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .fa-bars {
-    display: none;
-} */
-მაინც მოჩანს none რომც დავუწერე
+}
+.section_2_img{
+    width: 48%;
+}
+.section_2_p{
+    width: 47%;
+    color: white;
+    padding: 178px auto;
+}
+.section_2h{
+    font-size: 24px;
+    font-family:'insert' sans-serif;
+    font-weight: 600;
+    padding-bottom: 16px;
+}
+.section2_p1{
+    font-size: 16px;
+    font-weight: 500;
+    font-family:'insert' sans-serif;
+    padding-bottom: 16px;
+}
+.section_2_p2{
+    font-size: 16px;
+    font-weight: 500;
+    font-family:'insert' sans-serif;
+     
+}
+.article_cover{
+    width:90%;
+    border: 2px solid red;
+    margin: auto;
+    
+    
+}
+.arricle_img{
+    width: 100%;
+    position: relative;
+    align-items: center;
+    
+}
+.footer_end{
+    background-color:;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+.article_div1{
+   
+}
